fix hover effect on small devices for images

--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
@@ -44,8 +44,11 @@
 }
 
 .thumbnail:hover {
-  transform: scale(1.1);
-  z-index: 2;
+
+  @include atMedium {
+    transform: scale(1.1);
+    z-index: 2;
+  }
 }
 
 .modal {
